# Lustro

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECISIONS.md  LICENSE  README.md  SECURITY.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  release.yml  snapshot.yml
config/detekt/: detekt.yml
docs/: AGENTS.md  STYLEGUIDE.md
gradle/: facade-parity.gradle.kts  libs.versions.toml
lustro/: build.gradle.kts  consumer-rules.pro  gradle.properties
lustro-api/: build.gradle.kts  gradle.properties
lustro-api/api/: lustro-api.api
lustro-cli/: README.md  pyproject.toml
lustro-cli/src/lustro_cli/: __init__.py  cli.py  client.py  discovery.py
lustro-cli/src/lustro_cli/wire/: __init__.py  _schema.json  error-envelope.schema.json  network.openapi.json  pagination.schema.json  sync.py
lustro-cli/src/lustro_cli/wire/golden/: cursor-delta.json  cursor-unchanged.json  meta.json
lustro-cli/tests/: conftest.py  test_cli_dispatch.py  test_cli_poll_once.py  test_client_smoke.py  test_cursor_state.py  test_discovery.py  test_envelope_parity.py  test_error_envelope.py  test_golden_schemas.py
lustro-lint/: build.gradle.kts
lustro-noop/: build.gradle.kts  consumer-rules.pro  detekt-baseline.xml  gradle.properties
lustro-noop/src/main/: AndroidManifest.xml
lustro-wire-schema/: build.gradle.kts  gradle.properties
lustro/src/main/: AndroidManifest.xml
sample/: build.gradle.kts  proguard-rules.pro
wire-protocol/v1/: README.md  SCHEMA_INDEX.md  cursor-envelope.schema.json  meta.schema.json
(+95 files in other folders)
